--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,30 @@
 version: '3.8'
 services:
-  db:
-    image: mysql:8.0
-    cap_add:
-      - SYS_NICE
-    restart: always
-    command: sh -c "microdnf install -y vim"
-    environment:
-      - MYSQL_DATABASE=buecherverwaltung
-      - MYSQL_ROOT_PASSWORD=mauFJcuf5dhRMQrjj
-    ports:
-      - '3306:3306'
-    volumes:
-      - db:/var/lib/mysql
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-volumes:
-  db:
-    driver: local
+    php-apache-environment:
+        container_name: php-apache
+        build:
+            dockerfile: Dockerfile
+        depends_on:
+            - db
+        ports:
+            - 8000:80
+    phpmyadmin:
+        depends_on:
+            - db
+        image: phpmyadmin/phpmyadmin
+        restart: always
+        environment:
+            PMA_HOST: db
+            MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
+        ports:
+            - '8080:80'
+    db:
+        container_name: db
+        image: mysql
+        restart: always
+        environment:
+            MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
+            MYSQL_USER: MYSQL_USER
+            MYSQL_PASSWORD: MYSQL_PASSWORD
+        ports:
+            - "9906:3306"
